--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.76.1",
+    "@apollo/client": "^3.13.8",
+    "@tanstack/react-query": "^5.77.0",
     "html-react-parser": "^5.2.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
