--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   },
   "scripts": {
-    "start": "php -S localhost:8000 -t public"
+    "start": "php -S localhost:8000 -t public",
+    "setup-db": "php setup-db.php"
   },
   "require": {
     "nikic/fast-route": "^1.3",
